--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -45,10 +45,10 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.34f1c1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmDownloadFiles.cs" />
     <Compile Include="Assets\Launcher\Utility\Directory\DirectoryUtility.cs" />
     <Compile Include="Assets\Launcher\Utility\Extension\String\StringExtension.cs" />
     <Compile Include="Assets\Launcher\Ctrl\UI\Loading\UILoadingPanel.cs" />
+    <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmDownloadPackageFiles.cs" />
     <Compile Include="Assets\Launcher\Ctrl\UGUIExpand\RightClickButton.cs" />
     <Compile Include="Assets\Launcher\Ctrl\ScrollerPro\ScrollerPro.cs" />
     <Compile Include="Assets\Launcher\Utility\MD5\MD5Utility.cs" />
@@ -75,9 +75,9 @@
     <Compile Include="Assets\Launcher\Utility\Extension\Byte\ByteExtension.cs" />
     <Compile Include="Assets\Launcher\Utility\Rijndael\RijndaelUtility.cs" />
     <Compile Include="Assets\Launcher\Ctrl\UGUIExpand\DoubleClickButton.cs" />
+    <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmUpdatePackageManifest.cs" />
     <Compile Include="Assets\Launcher\Launcher\Patch\UserEvent.cs" />
     <Compile Include="Assets\Launcher\Ctrl\UI\ScreenBackgroundMessage\UIScreenBackgroundMessage.cs" />
-    <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmUpdateManifest.cs" />
     <Compile Include="Assets\Launcher\Launcher\StaticMethod\MonoStaticMethod.cs" />
     <Compile Include="Assets\Launcher\Launcher\Launcher.Action.cs" />
     <Compile Include="Assets\Launcher\Asset\ResShader.cs" />
@@ -92,21 +92,21 @@
     <Compile Include="Assets\Launcher\Utility\Event\Event.cs" />
     <Compile Include="Assets\Launcher\GameConfig\GameConfig.Build.cs" />
     <Compile Include="Assets\Launcher\Utility\Singleton\Singleton.cs" />
-    <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmPatchDone.cs" />
     <Compile Include="Assets\Launcher\Launcher\Launcher.GameConfig.cs" />
+    <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmStartGame.cs" />
+    <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmClearCacheBundle.cs" />
+    <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmDownloadPackageOver.cs" />
+    <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmInitializePackage.cs" />
     <Compile Include="Assets\Launcher\Asset\ResGameObject.cs" />
     <Compile Include="Assets\Launcher\Utility\Json\JsonUtility.cs" />
     <Compile Include="Assets\Launcher\Utility\Serialize\SerializeUtility.cs" />
     <Compile Include="Assets\Launcher\Utility\Machine\StateMachine.cs" />
     <Compile Include="Assets\Launcher\Launcher\Launcher.UpdateVersion.cs" />
-    <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmClearCache.cs" />
     <Compile Include="Assets\Launcher\Ctrl\UGUIExpand\EnterClickButton.cs" />
+    <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmRequestPackageVersion.cs" />
     <Compile Include="Assets\Launcher\Ctrl\UI\ForeGround\UIForeGroundPanel.cs" />
-    <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmDownloadOver.cs" />
     <Compile Include="Assets\Launcher\Ctrl\ScrollerPro\GroupBase.cs" />
-    <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmInitialize.cs" />
     <Compile Include="Assets\Launcher\Utility\Extension\Transform\TransformExtension.cs" />
-    <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmUpdateVersion.cs" />
     <Compile Include="Assets\Launcher\Launcher\Launcher.GameServer.cs" />
     <Compile Include="Assets\Launcher\Asset\ResObject.cs" />
     <Compile Include="Assets\Launcher\Ctrl\UGUIExpand\EventTriggerListener.cs" />
