--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmDownloadPackageOver.cs" />
     <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmInitializePackage.cs" />
     <Compile Include="Assets\Launcher\Asset\ResGameObject.cs" />
+    <Compile Include="Assets\Launcher\Launcher\GameControl.cs" />
     <Compile Include="Assets\Launcher\Utility\Json\JsonUtility.cs" />
     <Compile Include="Assets\Launcher\Utility\Serialize\SerializeUtility.cs" />
     <Compile Include="Assets\Launcher\Utility\Machine\StateMachine.cs" />
@@ -118,7 +119,6 @@
     <Compile Include="Assets\Launcher\Launcher\EventDefine\UserEventDefine.cs" />
     <Compile Include="Assets\Launcher\Ctrl\UI\UIAdapt\UIAdapt.cs" />
     <Compile Include="Assets\Launcher\Launcher\Launcher.GameStart.cs" />
-    <Compile Include="Assets\Launcher\Launcher\Launcher.GameControl.cs" />
     <None Include="Assets\Launcher\Unity.Model.asmdef" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.34f1c1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
