--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Assets\Launcher\Launcher\StaticMethod\AStaticMethod.cs" />
     <Compile Include="Assets\Launcher\Utility\Extension\Byte\ByteExtension.cs" />
     <Compile Include="Assets\Launcher\Utility\Rijndael\RijndaelUtility.cs" />
+    <Compile Include="Assets\Launcher\Launcher\Launcher.cs" />
     <Compile Include="Assets\Launcher\Ctrl\UGUIExpand\DoubleClickButton.cs" />
     <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmUpdatePackageManifest.cs" />
     <Compile Include="Assets\Launcher\Ctrl\UI\ScreenBackgroundMessage\UIScreenBackgroundMessage.cs" />
@@ -117,7 +118,6 @@
     <Compile Include="Assets\Launcher\Launcher\Launcher.Language.cs" />
     <Compile Include="Assets\Launcher\Launcher\EventDefine\UserEventDefine.cs" />
     <Compile Include="Assets\Launcher\Ctrl\UI\UIAdapt\UIAdapt.cs" />
-    <Compile Include="Assets\Launcher\Launcher\Launcher.GameStart.cs" />
     <None Include="Assets\Launcher\Unity.Model.asmdef" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.34f1c1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
