--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -376,6 +376,7 @@
     <Compile Include="Assets\Hotfix\GameLogic\ECS\BehavoirTree\Utility\Extension\BTAgentExtension.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Manager\BTScript\BTScriptManager.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\ECS\Component\ComAABBCollider\ComAABBCollider.cs" />
+    <Compile Include="Assets\Hotfix\GameLogic\Battle\ComView\CharacterActorView.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Battle\BTScript\Skill\SkillBTScript.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Event\EventManager.cs" />
     <Compile Include="Assets\Hotfix\Framework\Base\ReferencePool\IReference.cs" />
