--- a/Assets/Hotfix/Unity.Hotfix.asmdef
+++ b/Assets/Hotfix/Unity.Hotfix.asmdef
@@ -10,7 +10,10 @@
         "GUID:02c11f442ffc148a9b44d2aa0618ec34",
         "GUID:2a81c6962524d424a8ef5072bd3b0fa0",
         "GUID:2ea3278fb8a4e274788cb042d59e8148",
-        "GUID:68bd7fdb68ef2684e982e8a9825b18a5"
+        "GUID:68bd7fdb68ef2684e982e8a9825b18a5",
+        "GUID:efa45043feb7e4147a305b73b5cea642",
+        "GUID:f4059aaf6c60a4a58a177a2609feb769",
+        "GUID:de4e6084e6d474788bb8c799d6b461eb"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
