--- a/Assets/Launcher/Unity.Model.asmdef
+++ b/Assets/Launcher/Unity.Model.asmdef
@@ -7,7 +7,10 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:174b432621f01fb418be26ffc6c90e22",
         "GUID:e34a5702dd353724aa315fb8011f08c3",
-        "GUID:02c11f442ffc148a9b44d2aa0618ec34"
+        "GUID:02c11f442ffc148a9b44d2aa0618ec34",
+        "GUID:efa45043feb7e4147a305b73b5cea642",
+        "GUID:f4059aaf6c60a4a58a177a2609feb769",
+        "GUID:de4e6084e6d474788bb8c799d6b461eb"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
