--- a/Assets/Hotfix/Unity.Hotfix.asmdef
+++ b/Assets/Hotfix/Unity.Hotfix.asmdef
@@ -13,7 +13,9 @@
         "GUID:68bd7fdb68ef2684e982e8a9825b18a5",
         "GUID:efa45043feb7e4147a305b73b5cea642",
         "GUID:f4059aaf6c60a4a58a177a2609feb769",
-        "GUID:de4e6084e6d474788bb8c799d6b461eb"
+        "GUID:de4e6084e6d474788bb8c799d6b461eb",
+        "GUID:c82d6f32a4ef87b4d8488b6b8c880713",
+        "GUID:d8b63aba1907145bea998dd612889d6b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
