--- a/Unity.Editor.csproj
+++ b/Unity.Editor.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Assets\Editor\Editor\OdinEditorWindow\UIEditorWindow.cs" />
     <Compile Include="Assets\Editor\Utility\ObjectType\ObjectType\Vector3ObjectType.cs" />
     <Compile Include="Assets\Editor\Editor\OdinEditorWindow\MenuTree\MenuTreeAttribute.cs" />
+    <Compile Include="Assets\Editor\EditorStartup\EditorStartup.cs" />
     <Compile Include="Assets\Editor\Utility\ObjectType\ObjectType\CharObjectType.cs" />
     <Compile Include="Assets\Editor\Editor\OdinEditorWindow\MenuTree\AMenuEditorWindow.cs" />
     <Compile Include="Assets\Editor\OpenAsset\LogConfig\LogConfig.cs" />
